Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Get well soon, my dearest friend. The world (and I) miss your smile. 💛
             
             <div id="healingMessage" class="healing-message"></div>
              <audio id="backgroundMusic" loop>
-    <source src="audio/mp3.mp3" type="audio/mpeg">
+     <source src="https://concepcion118.github.io/mp3/">
 </audio>
         </div>
         
@@ -115,4 +115,5 @@ Get well soon, my dearest friend. The world (and I) miss your smile. 💛
 
     <script src="script.js"></script>
 </body>
+
 </html>
