--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ Get well soon, my dearest friend. The world (and I) miss your smile. 💛
             </button>
             
             <div id="healingMessage" class="healing-message"></div>
-             <audio id="backgroundMusic" loop>
-     <source src="https://concepcion118.github.io/mp3/">
+            <audio id="backgroundMusic" loop>
+    <source src="https://concepcion118.github.io/mp3/" type="audio/mpeg">
 </audio>
         </div>
         
@@ -117,3 +117,4 @@ Get well soon, my dearest friend. The world (and I) miss your smile. 💛
 </body>
 
 </html>
+
