--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Get well soon, my dearest friend. The world (and I) miss your smile. 💛
             
             <div id="healingMessage" class="healing-message"></div>
             <audio id="backgroundMusic" loop>
-    <source src="https://github.com/Concepcion118/mp3/blob/main/mp3.mp3" type="audio/mpeg">
+    <source src="https://github.com/Concepcion118/mp3/blob/main/mp3.mp3">
 </audio>
         </div>
         
@@ -117,5 +117,6 @@ Get well soon, my dearest friend. The world (and I) miss your smile. 💛
 </body>
 
 </html>
+
 
 
